<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="addView"
            type="com.example.studying.studies.dz11.AddProfileViewModel"/>
    </data>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/material_background"
        android:windowSoftInputMode="adjustPan">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@color/material_primary">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/dz11_material"
                android:layout_marginStart="@dimen/dz11_material"
                android:text="@string/new_profile"
                android:textColor="#ffffff"
                android:textSize="@dimen/lastName_textSize" />
        </LinearLayout>

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:windowSoftInputMode="adjustPan">

            <EditText
                android:id="@+id/add_surname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:inputType="text"
                android:text="@{addView.newSurname}"
                android:textSize="@dimen/lastName_textSize"
                android:textColor="@color/secondary_text_dark"
                android:hint="@string/hint_surname"
                android:textColorHint="@color/divider"
                android:layout_marginRight="8dp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="8dp"
                app:layout_constraintLeft_toLeftOf="parent" />

            <EditText
                android:id="@+id/add_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:inputType="text"
                android:text="@{addView.newName}"
                android:textSize="@dimen/firstName_textSize"
                android:textColor="@color/secondary_text"
                android:hint="@string/hint_name"
                android:textColorHint="@color/divider"
                android:layout_marginTop="5dp"
                app:layout_constraintTop_toBottomOf="@+id/add_surname"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />

            <EditText
                android:id="@+id/add_age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:inputType="numberDecimal"
                android:text="@{String.valueOf(addView.age)}"
                android:textSize="@dimen/otherInfo_textSize"
                android:textColor="@color/secondary_text"
                android:hint="@string/hint_age"
                android:textColorHint="@color/divider"
                android:layout_marginTop="5dp"
                app:layout_constraintTop_toBottomOf="@+id/add_name"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/addButton"
                app:layout_constraintVertical_bias="0.0" />

            <Button
                android:id="@+id/addButton"
                android:layout_width="395dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|bottom"
                android:text="@string/add_button"
                android:textAllCaps="true"
                android:textColor="@color/secondary_text"
                android:textSize="@dimen/lastName_textSize"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="8dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />
        </android.support.constraint.ConstraintLayout>
    </LinearLayout>
</layout>