<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="viewModel"
            type="com.example.studying.studies.dz14.Dz14ViewModel"/>
    </data>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#f9f9ec"
                android:orientation="vertical">
                <Button
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/showAllButton"
                    android:text="@string/showAllButton"
                    android:textAllCaps="true"
                    android:textColor="@color/material_dark_primary"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"/>

                <TextView
                    android:id="@+id/allNameTextView"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{viewModel.showNames}"
                    android:textSize="16sp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="#effdf9">
                <EditText
                    android:id="@+id/userName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="userName"
                    android:textColorHint="@color/divider"
                    android:layout_gravity="center"
                    android:text="@{viewModel.userName}"
                    android:layout_marginTop="5dp"
                    tools:ignore="HardcodedText" />

                <EditText
                    android:id="@+id/userAge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="userAge"
                    android:layout_gravity="center"
                    android:textColorHint="@color/divider"
                    android:text="@{viewModel.userAge}"
                    tools:ignore="HardcodedText" />

                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:id="@+id/spinner">
                </Spinner>

                <Button
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/addUserButton"
                    android:text="@string/add_button"
                    android:textColor="@color/material_dark_primary"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:background="#eaf2fa">
                <EditText
                    android:layout_width="105dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/search"
                    android:layout_marginTop="20dp"
                    android:hint="userId"
                    android:inputType="numberDecimal"
                    android:textColorHint="@color/divider"
                    android:layout_gravity="center"
                    tools:ignore="HardcodedText" />
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center">
                    <Button
                        android:layout_width="105dp"
                        android:layout_height="50dp"
                        android:id="@+id/showUserButton"
                        android:text="@string/showButton"
                        android:textAllCaps="true"
                        android:textColor="@color/material_dark_primary"
                        tools:ignore="ButtonStyle" />
                    <Button
                        android:layout_width="105dp"
                        android:layout_height="50dp"
                        android:id="@+id/updateUserButton"
                        android:text="@string/updateButton"
                        android:textAllCaps="false"
                        android:textColor="@color/material_dark_primary"
                        tools:ignore="ButtonStyle,SmallSp"
                        android:textSize="10sp"
                        android:layout_gravity="center_vertical"/>

                    <Button
                        android:id="@+id/deleteUserButton"
                        android:layout_width="105dp"
                        android:layout_height="50dp"
                        android:text="@string/deleteButton"
                        android:textColor="@color/material_dark_primary"
                        android:textAllCaps="true"
                        tools:ignore="ButtonStyle" />
                </LinearLayout>

                <TextView
                    android:id="@+id/NameTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@{viewModel.showName}"
                    android:textSize="18sp"/>
            </LinearLayout>





    </LinearLayout>
    </ScrollView>
</layout>